# cursor-shifter

./: .gitignore  LICENSE  README.md  README_EN.md  package.json  pnpm-lock.yaml
src/: account-detail.css  common.js  config.js  index.html  main.js  styles.css  windsurf.css  windsurf.html  windsurf.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_info.rs  app_config.rs  backup.rs  cursor_db.rs  cursor_path.rs  cursor_version.rs  device_id.rs  lib.rs  main.rs  seamless_switch.rs  session_token.rs  settings.rs  switch_account.rs  token_storage.rs  windows_registry.rs  windsurf_api.rs  windsurf_crypto.rs  windsurf_db.rs  windsurf_device.rs  windsurf_grpc.rs  windsurf_path.rs  windsurf_switch_account.rs
src/assets/: cursor-shifter-1024x1024.icns
